# fbitset

./: .gitignore  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  crash_no_ext  testmain
build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-debug/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: fbitset.hpp
test/: CMakeLists.txt  basic.cpp  testmain.cpp
